--- a/index.html
+++ b/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | DrawBridge</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
+    <!--<link rel="shortcut icon" href="TemplateData/favicon.ico">-->
+    <!--<link rel="stylesheet" href="TemplateData/style.css">-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--<script src="jquery-3.4.1.min.js"></script>-->
+    <!--Loading Page-->
+    <script type="text/javascript" src="./loadingPage.js"></script>
+    <link rel="stylesheet" href="./loadingPage.css">
+
+    <!--Ads Config-->
+    <script type="text/javascript" src="./ads.js"></script>
+    <script>
+        const gameInput = {
+            gameName: 'DrawBridgePuzzle',
+            publisherName: 'Weegoon',
+            surface: "test"
+        }
+        function successCb() { }
+        function failCb(reason) { }
+        window.GlanceGamingAdInterface.setupLibrary(gameInput, successCb, failCb);
+    </script>>
+
+    <!--Sticky Banner-->
+    <script type="text/javascript" src="./stickyBanner.js"></script>
+    <link rel="stylesheet" href="./stickyBanner.css">
+    <script>refreshStickyBannerAd()</script>>
+</head>
+<body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=600 height=960></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+        <canvas id="unity-canvas" width=600 height=960></canvas>
+        <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <div id="unity-progress-bar-empty">
+                <div id="unity-progress-bar-full"></div>
+            </div>
         </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DrawBridge</div>
-      </div>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+            <div id="unity-webgl-logo"></div>
+            <div id="unity-fullscreen-button"></div>
+            <div id="unity-build-title">DrawBridge</div>
+        </div>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      //var loadingBar = document.querySelector("#unity-loading-bar");
+      //var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
@@ -56,11 +80,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/DrawBridge.loader.js";
+      var loaderUrl = buildUrl + "/Build_html.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DrawBridge.data",
-        frameworkUrl: buildUrl + "/DrawBridge.framework.js",
-        codeUrl: buildUrl + "/DrawBridge.wasm",
+        dataUrl: buildUrl + "/Build_html.data",
+        frameworkUrl: buildUrl + "/Build_html.framework.js",
+        codeUrl: buildUrl + "/Build_html.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "weegoontest",
         productName: "DrawBridge",
@@ -99,15 +123,18 @@
         canvas.style.height = "960px";
       }
 
-      loadingBar.style.display = "block";
-
+      //loadingBar.style.display = "block";
+      var myGameInstance = null;
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
+            //progressBarFull.style.width = 100 * progress + "%";
+            /*progressBar(100 * progress);*/
+            progressBar(100 * progress);
         }).then((unityInstance) => {
-          loadingBar.style.display = "none";
+          myGameInstance = unityInstance;
+          //loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
           };
@@ -117,5 +144,16 @@
       };
       document.body.appendChild(script);
     </script>
-  </body>
+    <script>addLoader();</script>
+    <script>
+        function runOnAdClosed() {
+            $('#playMore').css("display", "none")
+            //destroyNRefreshBannerSlot();
+
+            //s_oGame.onRestart(); // function responsible for replaying the game.
+
+            myGameInstance.SendMessage('ShowAds', 'OnRewardAdsClosed');
+        }
+    </script>
+</body>
 </html>
