Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Ads Config-->
     <script type="text/javascript" src="./ads.js"></script>
     <script>
-        const gameInput = {
+        gameInput = {
             gameName: 'DrawBridgePuzzle',
             publisherName: 'Weegoon',
             surface: "test"
