--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | DrawBridge</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <!--<link rel="stylesheet" href="TemplateData/style.css">-->
+    <link rel="stylesheet" href="TemplateData/style.css">
     <!--<script src="jquery-3.4.1.min.js"></script>-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="./gpid.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 
