--- a/index.html
+++ b/index.html
@@ -1,53 +1,45 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity WebGL Player | DrawBridge</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <!--<script src="jquery-3.4.1.min.js"></script>-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!--Base Properties-->
+    <script type="text/javascript" src="./jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fingerprintjs2/2.1.0/fingerprint2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
+
     <script type="text/javascript" src="./gpid.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+    <script type="text/javascript" src="./ads.js"></script>
 
-    <!--Loading Page-->
     <script type="text/javascript" src="./loadingPage.js"></script>
     <link rel="stylesheet" href="./loadingPage.css">
 
-    <!--Ads Config-->
-    <script type="text/javascript" src="./ads.js"></script>
-    <!--<script>
-        //gameInput = {
-        //    gameName: 'DrawBridgePuzzle',
-        //    publisherName: 'Weegoon',
-        //    surface: "test"
-        //}
-        function successCb() { }
-        function failCb(reason) { }
-        window.GlanceGamingAdInterface.setupLibrary(gameInput, successCb, failCb);
-    </script>>-->
-    <!--Sticky Banner-->
     <script type="text/javascript" src="./stickyBanner.js"></script>
     <link rel="stylesheet" href="./stickyBanner.css">
-    <!-- <script>refreshStickyBannerAd()</script>> -->
-</head>
-<body>
-    <script>addLoader();</script>
+
+  </head>
+  <body>
     <div id="unity-container" class="unity-desktop">
-        <canvas id="unity-canvas" width=600 height=960></canvas>
-        <div id="unity-loading-bar">
-            <div id="unity-logo"></div>
-            <div id="unity-progress-bar-empty">
-                <div id="unity-progress-bar-full"></div>
-            </div>
+      <canvas id="unity-canvas" width=600 height=960></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
         </div>
-        <div id="unity-warning"> </div>
-        <div id="unity-footer">
-            <div id="unity-webgl-logo"></div>
-            <div id="unity-fullscreen-button"></div>
-            <div id="unity-build-title">DrawBridge</div>
-        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">DrawBridge</div>
+      </div>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
@@ -56,6 +48,7 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
+      var myGameInstance = null;
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -126,17 +119,20 @@
       }
 
       loadingBar.style.display = "block";
-      var myGameInstance = null;
+
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-            progressBarFull.style.width = 100 * progress + "%";
-            /*progressBar(100 * progress);*/
-            progressBar(100 * progress);
+          //progressBarFull.style.width = 100 * progress + "%";
+          progressBar(100 * progress);
         }).then((unityInstance) => {
-          myGameInstance = unityInstance;
           loadingBar.style.display = "none";
+          myGameInstance = unityInstance;
+
+          refreshStickyBannerAd();
+          rewardInstance = window.GlanceGamingAdInterface.loadRewardedAd(rewardObj, rewardedCallbacks);
+
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
           };
@@ -145,44 +141,8 @@
         });
       };
       document.body.appendChild(script);
-    </script>
-    <script>
-        function runOnAdClosed() {
-            if (_triggerReason === 'replay') {
-
-                // call game function for replay
-                _triggerReason = ''
-                showGame();
-
-                replayInstance = window.GlanceGamingAdInterface.loadRewardedAd(replayObj, rewardedCallbacks);
-
-            } else if (_triggerReason === 'reward') {
-
-                // If user close ad before reward
-                if (!isRewardGranted && isRewardedAdClosedByUser) {
-                    // call game function for not earning reward (failure case)
-
-                } else {
-
-                    // call game function for earned reward  (success case)
-                    myGameInstance.SendMessage('ShowAds', 'OnRewardAdsClosed');
-                }
-                _triggerReason = ''
-                rewardInstance = window.GlanceGamingAdInterface.loadRewardedAd(rewardObj, rewardedCallbacks);
-
-            }
-
-
-        }
-            //function runOnAdClosed() {
-            //    $('#playMore').css("display", "none")
-            //    //destroyNRefreshBannerSlot();
-
-            //    //s_oGame.onRestart(); // function responsible for replaying the game.
-
-            //    myGameInstance.SendMessage('ShowAds', 'OnRewardAdsClosed');
-            //}
-    </script>
-     <script>refreshStickyBannerAd()</script>> 
-</body>
+    </script>    
+    <script>addLoader();</script>
+    <script>showBumperAd();</script>
+  </body>
 </html>
