Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
       document.body.appendChild(script);
     </script>    
     <script>addLoader();</script>
-    <script>showBumperAd();</script>
+    <!-- <script>showBumperAd();</script> -->
   </body>
 </html>
