add replay event

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                     StickyBannerInstance = window?.GlanceGamingAdInterface?.showStickyBannerAd(StickyObj, bannerCallbacks);
                     refreshStickyBannerAd();
                     rewardInstance = window.GlanceGamingAdInterface.loadRewardedAd(rewardObj, rewardedCallbacks);
+                    replayInstance = window.GlanceGamingAdInterface.loadRewardedAd(replayObj, replayCallbacks);
                 }, 1000)
 
             }
