--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build_html.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build_html.data",
-        frameworkUrl: buildUrl + "/Build_html.framework.js",
-        codeUrl: buildUrl + "/Build_html.wasm",
+        dataUrl: buildUrl + "/Build_html.data.gz",
+        frameworkUrl: buildUrl + "/Build_html.framework.js.gz",
+        codeUrl: buildUrl + "/Build_html.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "weegoontest",
         productName: "DrawBridge",
